# testo

./: .gitignore  CMakeLists.txt  LICENSE.md  Quickguide.txt  README.md  build.bat  build.sh  build.testo  eula.txt
guest_additions/: CMakeLists.txt  guest_additions.cpp
guest_additions/deb/: CMakeLists.txt  postinst  postrm  prerm
guest_additions/iso/: autorun.js  testo-guest-additions.deb  testo-guest-additions.rpm
guest_additions/pkg/: CMakeLists.txt  postinst  postrm  prerm
guest_additions/rpm/: CMakeLists.txt
guest_additions/src/: CLI.cpp  CMakeLists.txt  Channel.cpp  Channel.hpp  Channel_getInfo.cpp  Channel_getInfo.hpp  File.cpp  File.hpp  HyperVChannel.cpp  HyperVChannel.hpp  HyperVLinuxChannel.cpp  HyperVLinuxChannel.hpp  HyperVWinChannel.cpp  HyperVWinChannel.hpp  MainLinux.cpp  MainWin.cpp  MessageHandler.cpp  MessageHandler.hpp  Process.hpp  QemuLinuxChannel.cpp  QemuLinuxChannel.hpp  QemuWinChannel.cpp  QemuWinChannel.hpp  QemuWinChannelExtra.cpp  QemuWinChannelExtra.hpp  Server.cpp  Server.hpp  SharedFolder.cpp  SharedFolder.hpp  main.cpp
guest_additions/tests/: win.testo  win7.testo
lib/: CMakeLists.txt  winapi.hpp  wmi.hpp
lib/guest_additions_common_stuff/: CMakeLists.txt  GuestAdditions.cpp  GuestAdditions.hpp
lib/guestfs/: file.hpp  guestfs.cpp  guestfs.hpp
lib/hyperv/: AsioLinux.hpp  AsioWin.hpp  Bridge.cpp  Bridge.hpp  CMakeLists.txt  Connect.cpp  Connect.hpp  Disk.cpp  Disk.hpp  Display.cpp  Display.hpp  Drive.cpp  Drive.hpp  Keyboard.cpp  Keyboard.hpp  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  NIC.cpp  NIC.hpp  Processor.cpp  Processor.hpp  ResourceTemplate.cpp  ResourceTemplate.hpp  Snapshot.cpp  Snapshot.hpp  StorageController.cpp  StorageController.hpp  SyntheticMouse.cpp  SyntheticMouse.hpp  main.cpp
lib/msft/: CMakeLists.txt  Connect.hpp  Disk.cpp  Partition.cpp  Volume.cpp  Volume.hpp  main.cpp
lib/os/: CMakeLists.txt  File.cpp  File.hpp  Process.cpp  Process.hpp
lib/posixapi/: CMakeLists.txt  File.cpp  File.hpp  Process.cpp  Process.hpp
lib/process/: Process.cpp
lib/psf/: CMakeLists.txt  Font.cpp  Font.hpp  main.cpp
lib/qemu/: CMakeLists.txt  Connect.cpp  Connect.hpp  Domain.cpp  Domain.hpp  Snapshot.cpp  StoragePool.cpp  Stream.cpp  Stream.hpp  XML.hpp
lib/stb/: CMakeLists.txt  Image.cpp  Image.hpp  TrueType.cpp  TrueType.hpp  main.cpp
lib/version_number/: CMakeLists.txt  VersionNumber.cpp  VersionNumber.hpp
lib/virtdisk/: CMakeLists.txt  VirtualDisk.hpp  main.cpp
lib/winapi/: CMakeLists.txt  Event.cpp  Event.hpp  File.cpp  File.hpp  Functions.cpp  Functions.hpp  Pipe.cpp  Pipe.hpp  Process.cpp  Process.hpp  RegKey.cpp  RegKey.hpp  SCManager.cpp  SCManager.hpp  Service.cpp  Service.hpp  UTF.cpp  UTF.hpp
lib/wmi/: CMakeLists.txt  Call.cpp  Call.hpp  CoInitializer.cpp  CoInitializer.hpp  EnumWbemClassObject.cpp  EnumWbemClassObject.hpp  Error.hpp  Object.hpp  Variant.cpp  Variant.hpp  WbemClassObject.cpp  WbemClassObject.hpp  WbemLocator.cpp  WbemLocator.hpp  WbemObjectTextSrc.cpp  WbemObjectTextSrc.hpp  WbemServices.cpp  WbemServices.hpp
negotiator/guest_additions/: CMakeLists.txt  Server.cpp  Server.hpp  guest_additions.cpp
negotiator/negotiator-agent/: CMakeLists.txt
pkg/: CMakeLists.txt
pkg/linux/: CMakeLists.txt  preinst
pkg/win/: .gitignore  CMakeLists.txt  patch.xml  testo-helper.cpp  testo.vdproj
src/: CMakeLists.txt  FlashDriveController.cpp  Global.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  QemuVmController.cpp  Utils.cpp  VboxVmController.cpp  VisitorInterpreter.cpp  VisitorSemantic.cpp  VmController.cpp  application.cpp  application.hpp  base64.hpp  linuxapi.hpp  main.cpp  utf8.hpp  vm.cpp  vm.hpp  winapi.hpp  wmi.hpp
src/darknet/: CMakeLists.txt  Image.hpp  Network.cpp  Network.hpp  YOLO.cpp  YOLO.hpp  main.cpp
src/guestfs/: CMakeLists.txt  file.hpp  guestfs.cpp  guestfs.hpp
src/hyperv/: Bridge.cpp  Bridge.hpp  CMakeLists.txt  Connect.cpp  Connect.hpp  Display.cpp  Display.hpp  Drive.cpp  Drive.hpp  Keyboard.cpp  Keyboard.hpp  Machine.cpp  Machine.hpp  NIC.cpp  NIC.hpp  StorageController.cpp  StorageController.hpp  main.cpp  wmi.cpp  wmi.hpp
src/js/: CMakeLists.txt  CString.cpp  Context.cpp  Context.hpp  FunctionsAdapters.hpp  GlobalFunctions.cpp  GlobalFunctions.hpp  Point.cpp  Point.hpp  Rect.cpp  Rect.hpp  Runtime.cpp  Runtime.hpp  Tensor.cpp  Tensor.hpp  Value.cpp  Value.hpp  main.cpp
src/license/: CMakeLists.txt  GetDeviceInfo.cpp  License.cpp  License.hpp  license_template.json  main.cpp  private.key  public.key  request_license.cpp
src/msft/: Connect.cpp  Connect.hpp  Disk.hpp  Partition.cpp  Partition.hpp  Volume.hpp
src/nn/: CMakeLists.txt  Char.cpp  Char.hpp  Context.cpp  Context.hpp  Homm3Detector.cpp  Homm3Detector.hpp  Homm3Object.cpp  Homm3Object.hpp  Homm3Tensor.cpp  Homm3Tensor.hpp  Img.hpp  ImgDetector.cpp  ImgDetector.hpp  ImgTensor.cpp  ImgTensor.hpp  LabelingWu.cpp  NNServiceClient.cpp  NNServiceClient.hpp  OCR.cpp  OCR.hpp  OnnxRuntime.cpp  OnnxRuntime.hpp  Point.hpp  Rect.hpp  SelfTestImg.cpp  Tensor.cpp  Tensor.hpp  TextColorPicker.cpp  TextColorPicker.hpp  TextColorPicker.onnx  TextDetector.cpp  TextDetector.hpp  TextLine.cpp  TextLine.hpp  TextRecognizer.cpp  TextRecognizer.hpp  TextRecognizer.onnx  TextTensor.cpp  TextTensor.hpp  (+1 more)
src/nn_service/: CMakeLists.txt  Channel.hpp  MainLinux.cpp  MainWin.cpp  MessageHandler.cpp  MessageHandler.hpp  Messages.hpp  client_demo.cpp  main.cpp
src/opencl++/: CMakeLists.txt  command_queue.cpp  command_queue.hpp  context.cpp  context.hpp  device.cpp  device.hpp  error.cpp  error.hpp  event.cpp  event.hpp  kernel.cpp  kernel.hpp  main.cpp  mem.cpp  mem.hpp  platform.cpp  platform.hpp  program.cpp  program.hpp
src/process/: CMakeLists.txt  Process.cpp  Process.hpp  main.cpp
src/qemu/: CMakeLists.txt  Connect.cpp  Connect.hpp  Host.cpp  (+16 more)
tests/: CMakeLists.txt  centos.testo  common.bash  common.py  run_tests.sh  simple_test.testo  test_action.py  test_cache_miss.py  test_controllers_creation.py  test_param_resolve.py  test_parser.py  test_rollback.cpp  test_semantic.py  test_test_spec_exclude.py  vars.sh
(+1689 files in other folders)
